v1.2.0 - добавлен кролик убийца и другие новые мобы. Сообщения вынесены в конфиг. Добавлена поддержка MinIMessages для имён мобов