@@ -1,9 +1,9 @@
 package com.flyaway.smartmobs;
 
+import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.bukkit.*;
 import org.bukkit.attribute.Attribute;
 import org.bukkit.entity.*;
-import org.bukkit.metadata.FixedMetadataValue;
 import org.bukkit.persistence.PersistentDataType;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
@@ -17,9 +17,11 @@ public class MobManager {
 
     private final Random random = new Random();
     private final ConfigManager configManager;
+    private final MiniMessage miniMessage;
 
     public MobManager() {
         this.configManager = SmartMobs.getInstance().getConfigManager();
+        this.miniMessage = MiniMessage.miniMessage();
     }
 
     public void enhanceMob(LivingEntity entity) {
@@ -42,14 +44,7 @@ public class MobManager {
                 List<ConfigManager.RadiusLevel> levels = configManager.getRadiusLevels();
                 if (levels != null && !levels.isEmpty()) {
                     boolean found = false;
-                    // Логируем уровни для отладки (индекс и границы)
-                    for (int i = 0; i < levels.size(); i++) {
-                        ConfigManager.RadiusLevel lvl = levels.get(i);
-                    }
-
-                    for (int i = 0; i < levels.size(); i++) {
-                        ConfigManager.RadiusLevel level = levels.get(i);
-
+                    for (ConfigManager.RadiusLevel level : levels) {
                         // Нормализованные границы должны быть валидными; если level.to < level.from — пропускаем
                         if (level.to < level.from) {
                             continue;
@@ -70,7 +65,7 @@ public class MobManager {
                     if (!found) {
                         // если за пределом (normalized >= 1.0) — используем последний уровень как "максимальный"
                         if (normalized >= 1.0) {
-                            ConfigManager.RadiusLevel last = levels.get(levels.size() - 1);
+                            ConfigManager.RadiusLevel last = levels.getLast();
                             hardenedChance = last.hardened;
                             eliteChance = last.elite;
                         } else {
@@ -97,13 +92,21 @@ public class MobManager {
     private double getDoubleFromConfig(Object value) {
         if (value instanceof Integer) return ((Integer) value).doubleValue();
         if (value instanceof Double) return (Double) value;
-        try { return Double.parseDouble(String.valueOf(value)); } catch (Exception e) { return 1.0; }
+        try {
+            return Double.parseDouble(String.valueOf(value));
+        } catch (Exception e) {
+            return 1.0;
+        }
     }
 
     private int getIntFromConfig(Object value) {
         if (value instanceof Double) return ((Double) value).intValue();
         if (value instanceof Integer) return (Integer) value;
-        try { return Integer.parseInt(String.valueOf(value)); } catch (Exception e) { return 1; }
+        try {
+            return Integer.parseInt(String.valueOf(value));
+        } catch (Exception e) {
+            return 1;
+        }
     }
 
     public void makeHardened(LivingEntity entity) {
@@ -127,7 +130,10 @@ public class MobManager {
             double base = entity.getAttribute(Attribute.MAX_HEALTH).getBaseValue();
             entity.getAttribute(Attribute.MAX_HEALTH).setBaseValue(base * hpMultiplier);
             double maxHealth = entity.getAttribute(Attribute.MAX_HEALTH).getBaseValue();
-            try { entity.setHealth(maxHealth); } catch (IllegalArgumentException ignored) {}
+            try {
+                entity.setHealth(maxHealth);
+            } catch (IllegalArgumentException ignored) {
+            }
         }
 
         if (entity.getAttribute(Attribute.ATTACK_DAMAGE) != null) {
@@ -149,13 +155,13 @@ public class MobManager {
                     Math.max(0, configManager.getEliteStrengthLevel()), true, false, false));
         }
 
-        setDisplayNameWithTimer(entity, variant);
+        setDisplayName(entity, variant);
     }
 
-    private void setDisplayNameWithTimer(LivingEntity entity, String variant) {
+    private void setDisplayName(LivingEntity entity, String variant) {
         String displayName = configManager.getDisplayName(variant, entity.getType());
         if (displayName != null && !displayName.isEmpty()) {
-            entity.setCustomName(displayName);
+            entity.customName(miniMessage.deserialize(displayName));
             entity.setCustomNameVisible(false);
         }
     }
@@ -164,203 +170,274 @@ public class MobManager {
         Map<String, Object> abilities = configManager.getSpecialAbilities(entity.getType(), variant);
         if (abilities == null || abilities.isEmpty()) return;
 
-        abilities.forEach((key, value) -> applyAbility(entity, key, value, variant));
+        abilities.forEach((key, value) -> applyAbility(entity, key, value));
     }
 
-    private void applyAbility(LivingEntity entity, String key, Object value, String variant) {
+    private void applyAbility(LivingEntity entity, String key, Object value) {
         switch (entity.getType()) {
-            case SKELETON: applySkeletonAbility((Skeleton) entity, key, value, variant); break;
-            case CREEPER: applyCreeperAbility((Creeper) entity, key, value, variant); break;
-            case SPIDER: case CAVE_SPIDER: applySpiderAbility((Spider) entity, key, value, variant); break;
-            case ENDERMAN: applyEndermanAbility((Enderman) entity, key, value, variant); break;
-            case WITCH: applyWitchAbility((Witch) entity, key, value, variant); break;
-            case PHANTOM: applyPhantomAbility((Phantom) entity, key, value, variant); break;
-            case BLAZE: applyBlazeAbility((Blaze) entity, key, value, variant); break;
-            case GHAST: applyGhastAbility((Ghast) entity, key, value, variant); break;
-            default: break;
+            case SKELETON:
+            case STRAY:
+            case BOGGED:
+                applySkeletonAbility(entity, key, value);
+                break;
+            case CREEPER:
+                applyCreeperAbility((Creeper) entity, key, value);
+                break;
+            case SPIDER:
+            case CAVE_SPIDER:
+                applySpiderAbility((Spider) entity, key, value);
+                break;
+            case ENDERMAN:
+                applyEndermanAbility((Enderman) entity, key, value);
+                break;
+            case WITCH:
+                applyWitchAbility((Witch) entity, key, value);
+                break;
+            case PHANTOM:
+                applyPhantomAbility((Phantom) entity, key, value);
+                break;
+            case BLAZE:
+                applyBlazeAbility((Blaze) entity, key, value);
+                break;
+            case GHAST:
+                applyGhastAbility((Ghast) entity, key, value);
+                break;
+            case RABBIT:
+                applyRabbitAbility((Rabbit) entity, key, value);
+                break;
+            default:
+                break;
         }
     }
 
     // ===================== MOB-SPECIFIC ABILITY METHODS =====================
-    private void applySkeletonAbility(Skeleton skeleton, String key, Object value, String variant) {
+    private void applySkeletonAbility(LivingEntity skeleton, String key, Object value) {
+        if (!(skeleton instanceof AbstractSkeleton skeletonEntity)) return;
+
         switch (key) {
             case "arrow-speed-multiplier":
                 double speedMultiplier = getDoubleFromConfig(value);
-                skeleton.getPersistentDataContainer().set(
-                    MobKeys.ARROW_SPEED_MULTIPLIER,
-                    PersistentDataType.DOUBLE,
-                    speedMultiplier
+                skeletonEntity.getPersistentDataContainer().set(
+                        MobKeys.ARROW_SPEED_MULTIPLIER,
+                        PersistentDataType.DOUBLE,
+                        speedMultiplier
                 );
                 break;
             case "attack-speed":
-                if (skeleton.getAttribute(Attribute.ATTACK_SPEED) != null) {
+                if (skeletonEntity.getAttribute(Attribute.ATTACK_SPEED) != null) {
                     double attackSpeedMultiplier = getDoubleFromConfig(value);
-                    double baseSpeed = skeleton.getAttribute(Attribute.ATTACK_SPEED).getBaseValue();
-                    skeleton.getAttribute(Attribute.ATTACK_SPEED).setBaseValue(baseSpeed * attackSpeedMultiplier);
+                    double baseSpeed = skeletonEntity.getAttribute(Attribute.ATTACK_SPEED).getBaseValue();
+                    skeletonEntity.getAttribute(Attribute.ATTACK_SPEED).setBaseValue(baseSpeed * attackSpeedMultiplier);
                 }
                 break;
             case "triple-shot":
                 if (Boolean.TRUE.equals(value)) {
-                    skeleton.getPersistentDataContainer().set(
-                        MobKeys.TRIPLE_SHOT,
-                        PersistentDataType.BYTE,
-                        (byte) 1
+                    skeletonEntity.getPersistentDataContainer().set(
+                            MobKeys.TRIPLE_SHOT,
+                            PersistentDataType.BYTE,
+                            (byte) 1
                     );
                 }
                 break;
         }
     }
 
-    private void applyCreeperAbility(Creeper creeper, String key, Object value, String variant) {
+    private void applyCreeperAbility(Creeper creeper, String key, Object value) {
         switch (key) {
             case "explosion-power":
                 double explosionPower = getDoubleFromConfig(value);
                 creeper.getPersistentDataContainer().set(
-                    MobKeys.EXPLOSION_POWER,
-                    PersistentDataType.DOUBLE,
-                    explosionPower
+                        MobKeys.EXPLOSION_POWER,
+                        PersistentDataType.DOUBLE,
+                        explosionPower
                 );
                 break;
-            case "fuse-time": int current = creeper.getMaxFuseTicks(); if (current > 0) creeper.setMaxFuseTicks(Math.max(1, (int)(current * getDoubleFromConfig(value)))); break;
-            case "charged": if (Boolean.TRUE.equals(value)) creeper.setPowered(true); break;
+            case "fuse-time":
+                int current = creeper.getMaxFuseTicks();
+                if (current > 0) creeper.setMaxFuseTicks(Math.max(1, (int) (current * getDoubleFromConfig(value))));
+                break;
+            case "charged":
+                if (Boolean.TRUE.equals(value)) creeper.setPowered(true);
+                break;
         }
     }
 
-    private void applySpiderAbility(Spider spider, String key, Object value, String variant) {
+    private void applySpiderAbility(Spider spider, String key, Object value) {
         switch (key) {
-            case "jump-strength": if (spider.getAttribute(Attribute.JUMP_STRENGTH) != null) {
-                double base = spider.getAttribute(Attribute.JUMP_STRENGTH).getBaseValue();
-                spider.getAttribute(Attribute.JUMP_STRENGTH).setBaseValue(base * getDoubleFromConfig(value));
-            } break;
+            case "jump-strength":
+                if (spider.getAttribute(Attribute.JUMP_STRENGTH) != null) {
+                    double base = spider.getAttribute(Attribute.JUMP_STRENGTH).getBaseValue();
+                    spider.getAttribute(Attribute.JUMP_STRENGTH).setBaseValue(base * getDoubleFromConfig(value));
+                }
+                break;
             case "web-effect":
                 if (Boolean.TRUE.equals(value)) {
                     spider.getPersistentDataContainer().set(
-                        MobKeys.WEB_EFFECT,
-                        PersistentDataType.BYTE,
-                        (byte) 1
+                            MobKeys.WEB_EFFECT,
+                            PersistentDataType.BYTE,
+                            (byte) 1
                     );
                 }
                 break;
             case "poison-bite":
                 if (Boolean.TRUE.equals(value)) {
                     spider.getPersistentDataContainer().set(
-                        MobKeys.POISON_BITE,
-                        PersistentDataType.BYTE,
-                        (byte) 1
+                            MobKeys.POISON_BITE,
+                            PersistentDataType.BYTE,
+                            (byte) 1
                     );
                 }
                 break;
         }
     }
 
-    private void applyEndermanAbility(Enderman enderman, String key, Object value, String variant) {
+    private void applyEndermanAbility(Enderman enderman, String key, Object value) {
         switch (key) {
             case "teleport-range":
                 double teleportRange = getDoubleFromConfig(value);
                 enderman.getPersistentDataContainer().set(
-                    MobKeys.TELEPORT_RANGE,
-                    PersistentDataType.DOUBLE,
-                    teleportRange
+                        MobKeys.TELEPORT_RANGE,
+                        PersistentDataType.DOUBLE,
+                        teleportRange
                 );
                 break;
-            case "teleport-cooldown": if (enderman.getAttribute(Attribute.ATTACK_SPEED) != null) {
+            case "teleport-cooldown":
+                if (enderman.getAttribute(Attribute.ATTACK_SPEED) != null) {
                     double baseSpeed = enderman.getAttribute(Attribute.ATTACK_SPEED).getBaseValue();
                     enderman.getAttribute(Attribute.ATTACK_SPEED).setBaseValue(baseSpeed * getDoubleFromConfig(value));
-                } break;
-            case "water-resistance": if (Boolean.TRUE.equals(value)) {
-                enderman.getPersistentDataContainer().set(
-                    MobKeys.WATER_RESISTANT,
-                    PersistentDataType.BYTE,
-                    (byte) 1
-                );
-            } break;
+                }
+                break;
+            case "water-resistance":
+                if (Boolean.TRUE.equals(value)) {
+                    enderman.getPersistentDataContainer().set(
+                            MobKeys.WATER_RESISTANT,
+                            PersistentDataType.BYTE,
+                            (byte) 1
+                    );
+                }
+                break;
         }
     }
 
-    private void applyWitchAbility(Witch witch, String key, Object value, String variant) {
+    private void applyWitchAbility(Witch witch, String key, Object value) {
         switch (key) {
             case "potion-strength":
                 double potionStrength = getDoubleFromConfig(value);
                 witch.getPersistentDataContainer().set(
-                    MobKeys.POTION_STRENGTH,
-                    PersistentDataType.DOUBLE,
-                    potionStrength
+                        MobKeys.POTION_STRENGTH,
+                        PersistentDataType.DOUBLE,
+                        potionStrength
                 );
                 break;
             case "healing-chance":
                 double healingChance = getDoubleFromConfig(value);
                 witch.getPersistentDataContainer().set(
-                    MobKeys.HEALING_CHANCE,
-                    PersistentDataType.DOUBLE,
-                    healingChance
+                        MobKeys.HEALING_CHANCE,
+                        PersistentDataType.DOUBLE,
+                        healingChance
                 );
                 break;
-            case "resistance-potion": if (Boolean.TRUE.equals(value)) witch.addPotionEffect(new PotionEffect(PotionEffectType.RESISTANCE, Integer.MAX_VALUE, 1, true, false)); break;
+            case "resistance-potion":
+                if (Boolean.TRUE.equals(value))
+                    witch.addPotionEffect(new PotionEffect(PotionEffectType.RESISTANCE, Integer.MAX_VALUE, 1, true, false));
+                break;
         }
     }
 
-    private void applyPhantomAbility(Phantom phantom, String key, Object value, String variant) {
+    private void applyPhantomAbility(Phantom phantom, String key, Object value) {
         switch (key) {
-            case "swoop-speed": if (phantom.getAttribute(Attribute.MOVEMENT_SPEED) != null) {
-                double base = phantom.getAttribute(Attribute.MOVEMENT_SPEED).getBaseValue();
-                phantom.getAttribute(Attribute.MOVEMENT_SPEED).setBaseValue(base * getDoubleFromConfig(value));
-            } break;
-            case "attack-cooldown": if (phantom.getAttribute(Attribute.ATTACK_SPEED) != null) {
-                double baseAttackSpeed = phantom.getAttribute(Attribute.ATTACK_SPEED).getBaseValue();
-                double attackMultiplier = getDoubleFromConfig(value);
-                phantom.getAttribute(Attribute.ATTACK_SPEED).setBaseValue(baseAttackSpeed * attackMultiplier);
-            } break;
-            case "size-multiplier": try { phantom.setSize(Math.max(1, Math.min(20, (int)Math.round(phantom.getSize() * getDoubleFromConfig(value))))); } catch (Exception ignored) {} break;
+            case "swoop-speed":
+                if (phantom.getAttribute(Attribute.MOVEMENT_SPEED) != null) {
+                    double base = phantom.getAttribute(Attribute.MOVEMENT_SPEED).getBaseValue();
+                    phantom.getAttribute(Attribute.MOVEMENT_SPEED).setBaseValue(base * getDoubleFromConfig(value));
+                }
+                break;
+            case "attack-cooldown":
+                if (phantom.getAttribute(Attribute.ATTACK_SPEED) != null) {
+                    double baseAttackSpeed = phantom.getAttribute(Attribute.ATTACK_SPEED).getBaseValue();
+                    double attackMultiplier = getDoubleFromConfig(value);
+                    phantom.getAttribute(Attribute.ATTACK_SPEED).setBaseValue(baseAttackSpeed * attackMultiplier);
+                }
+                break;
+            case "size-multiplier":
+                try {
+                    phantom.setSize(Math.max(1, Math.min(20, (int) Math.round(phantom.getSize() * getDoubleFromConfig(value)))));
+                } catch (Exception ignored) {
+                }
+                break;
         }
     }
 
-    private void applyBlazeAbility(Blaze blaze, String key, Object value, String variant) {
+    private void applyBlazeAbility(Blaze blaze, String key, Object value) {
         switch (key) {
             case "fireball-speed":
                 double fireballSpeed = getDoubleFromConfig(value);
                 blaze.getPersistentDataContainer().set(
-                    MobKeys.FIREBALL_SPEED,
-                    PersistentDataType.DOUBLE,
-                    fireballSpeed
+                        MobKeys.FIREBALL_SPEED,
+                        PersistentDataType.DOUBLE,
+                        fireballSpeed
                 );
                 break;
             case "fireball-count":
                 int fireballCount = getIntFromConfig(value);
                 blaze.getPersistentDataContainer().set(
-                    MobKeys.FIREBALL_COUNT,
-                    PersistentDataType.INTEGER,
-                    fireballCount
+                        MobKeys.FIREBALL_COUNT,
+                        PersistentDataType.INTEGER,
+                        fireballCount
                 );
                 break;
-            case "fire-aura": if (Boolean.TRUE.equals(value)) startFireAura(blaze); break;
+            case "fire-aura":
+                if (Boolean.TRUE.equals(value)) startFireAura(blaze);
+                break;
         }
     }
 
-    private void applyGhastAbility(Ghast ghast, String key, Object value, String variant) {
+    private void applyGhastAbility(Ghast ghast, String key, Object value) {
         switch (key) {
             case "explosion-power":
                 double explosionPower = getDoubleFromConfig(value);
                 ghast.getPersistentDataContainer().set(
-                    MobKeys.EXPLOSION_POWER,
-                    PersistentDataType.DOUBLE,
-                    explosionPower
+                        MobKeys.EXPLOSION_POWER,
+                        PersistentDataType.DOUBLE,
+                        explosionPower
                 );
                 break;
             case "fireball-speed":
                 double fireballSpeed = getDoubleFromConfig(value);
                 ghast.getPersistentDataContainer().set(
-                    MobKeys.FIREBALL_SPEED,
-                    PersistentDataType.DOUBLE,
-                    fireballSpeed
+                        MobKeys.FIREBALL_SPEED,
+                        PersistentDataType.DOUBLE,
+                        fireballSpeed
                 );
                 break;
             case "triple-shot":
                 if (Boolean.TRUE.equals(value)) {
                     ghast.getPersistentDataContainer().set(
-                        MobKeys.TRIPLE_SHOT,
-                        PersistentDataType.BYTE,
-                        (byte) 1
+                            MobKeys.TRIPLE_SHOT,
+                            PersistentDataType.BYTE,
+                            (byte) 1
                     );
+                }
+                break;
+        }
+    }
+
+    private void applyRabbitAbility(Rabbit rabbit, String key, Object value) {
+        switch (key) {
+            case "killer":
+                if (Boolean.TRUE.equals(value)) {
+                    // Делаем кролика агрессивным и увеличиваем урон
+                    rabbit.setRabbitType(Rabbit.Type.THE_KILLER_BUNNY);
+                    if (rabbit.getAttribute(Attribute.ATTACK_DAMAGE) != null) {
+                        double base = rabbit.getAttribute(Attribute.ATTACK_DAMAGE).getBaseValue();
+                        rabbit.getAttribute(Attribute.ATTACK_DAMAGE).setBaseValue(base * 3.0);
+                    }
+                }
+                break;
+            case "jump-strength":
+                if (rabbit.getAttribute(Attribute.JUMP_STRENGTH) != null) {
+                    double base = rabbit.getAttribute(Attribute.JUMP_STRENGTH).getBaseValue();
+                    rabbit.getAttribute(Attribute.JUMP_STRENGTH).setBaseValue(base * getDoubleFromConfig(value));
                 }
                 break;
         }
@@ -370,9 +447,13 @@ public class MobManager {
         new BukkitRunnable() {
             @Override
             public void run() {
-                if (!blaze.isValid() || blaze.isDead()) { this.cancel(); return; }
+                if (!blaze.isValid() || blaze.isDead()) {
+                    this.cancel();
+                    return;
+                }
                 blaze.getNearbyEntities(3, 3, 3).forEach(entity -> {
-                    if (entity instanceof LivingEntity && !(entity instanceof Blaze)) ((LivingEntity) entity).setFireTicks(60);
+                    if (entity instanceof LivingEntity && !(entity instanceof Blaze))
+                        (entity).setFireTicks(60);
                 });
                 blaze.getWorld().spawnParticle(Particle.FLAME, blaze.getLocation(), 10, 1, 1, 1);
             }
